package com.abner.forms_api_poc.entities.form;

public enum FormStatus {
  DRAFT,
  PUBLISHED,
  CLOSED;
}
