package com.abner.forms_api_poc.entities.submission;

import org.bson.types.ObjectId;

public class AnswerItem {
  public ObjectId fieldId;

  public Object value;
}
